2012-08-17  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-16
	* correctly handle the case when there is no pre-existing athfile cache
	* M python/AthFile/__init__.py

2012-08-16  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-15
	* correctly pick-up changes from athfile forked subprocess
	the bug was introduced with the refactoring from -00-12-03.
	as the peeking was not in the same process, the parent process
	was keeping its own cache, overriding whatever the subprocess had
	put in the persistent athfile.cache file.
	* introduce 2 new (debugging) env. vars:
	  - ATHFILE_DEBUG=1 -> set athfile.msg.level == VERBOSE
	  - PYUTILS_SHUTUP_DEBUG=1 -> display filtered out messages (ROOT,...)
	* M python/Helpers.py
	* M python/AthFile/__init__.py
	* M python/AthFile/impl.py

2012-07-13  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-14
	* fix bug #94458: implement a mode=summary and mode=detailed
	  switch to limit the amount of output for hugely different files.
	  mode=detailed is kept as the default.
	* M python/scripts/diff_root_files.py

2012-07-11  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-13
	* fix bug #95993: preliminary support for reading ROOT files over https
	* M python/AthFile/impl.py

2012-07-10  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-12
	* fixing bug #95942 following the good advice of wim
	* M python/AthFile/impl.py

2012-07-09  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-11
	* adding optional protobuf generation for d3pd (experimental)
	* M bin/atl-gen-athena-d3pd-reader

2012-07-02  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-10
	* fixing bug #95748: add _ to the allowed list of tag characters
	* M bin/avn.py

2012-06-07  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-09
	* revert changes from PyUtils-00-12-08 and make
	  pool_insertFileToCatalog and pool_extractFileIdentifier less verbose
	* M python/AthFile/impl.py